# rotoplexer

./: README.md
3d models/: asa 6 wipers prusaslicer.3mf  fdm wiper.step  fdm wiper.stl  frontpanel.dxf
electronics/controller board/: controller board.kicad_pcb  controller board.kicad_prl  controller board.kicad_pro  controller board.kicad_sch  controller board.step  fp-info-cache  fp-lib-table  sym-lib-table
electronics/switch wafer pcb/: fp-info-cache  rotary_switch_nv_scanner.kicad_pcb  rotary_switch_nv_scanner.kicad_prl  rotary_switch_nv_scanner.kicad_pro  rotary_switch_nv_scanner.kicad_sch  rotary_switch_nv_scanner.step
electronics/switch wafer pcb/Library.pretty/: MountingHole_metal_pcb.kicad_mod
electronics/switch wafer pcb/gerber/: rotary_switch_nv_scanner-Edge_Cuts.gbr  rotary_switch_nv_scanner-F_Cu.gbr  rotary_switch_nv_scanner-F_Mask.gbr  rotary_switch_nv_scanner-F_Paste.gbr  rotary_switch_nv_scanner-F_Silkscreen.gbr  rotary_switch_nv_scanner-NPTH.drl  rotary_switch_nv_scanner-PTH.drl  rotary_switch_nv_scanner-job.gbrjob
uc software/TMC2209 stall detection/: nVscanne8.ino
uc software/pi_pico_home_gpio_inputs/: CMakeLists.txt  pi_pico_home_gpio_inputs.c
uc software/step direction homing switches/: nVscanne9.ino
